# progect-yarik

./: CMakeLists.txt  chartwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  prng.h
ConsoleApplication4/: ConsoleApplication4.cpp  ConsoleApplication4.vcxproj
